some things I forgot to modify from the default generated template

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "tree-sitter-jai"
 description = "tree-sitter grammar for the language"
 version = "0.1.0"
 authors = ["constantitus <constantitus@gmail.com>"]
-license = "MIT"
+license = "MIT-0"
 readme = "README.md"
 keywords = ["incremental", "parsing", "tree-sitter", "jai"]
 categories = ["parsing", "text-editors"]
